--- a/Training/app/src/main/res/layout/garage_row.xml
+++ b/Training/app/src/main/res/layout/garage_row.xml
@@ -118,7 +118,7 @@
                     android:textAlignment="center"
                     android:layout_width="96dp"
                     android:layout_height="32dp"
-                    android:background="#FF4081"
+                    android:background="#D32F2F"
                     android:fontFamily="@font/roboto"
                     android:textColor="@color/white_color"
                     android:textAllCaps="false"
