--- a/Training/app/src/main/res/values/colors.xml
+++ b/Training/app/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
     #102E37
 
     -->
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#4CAF50</color>
     <color name="lightprimarycolor">#BBDEFB</color>
     <color name="dividercolor">#BDBDBD</color>
     <color name="secondarytext">#757575</color>
@@ -33,7 +33,7 @@
     <color name="lightGrey">#d3d3d3</color>
     <color name="light2grey">#DDDCDC</color>
     <color name="foreground_material_dark">#6a3636</color>
-    <color  name="startblue">#09c6df</color>
+    <color  name="startblue">#03A9F4</color>
     <color  name="endtblue">#0bcce6</color>
     <color name="cardview_initial_background">#71C3DE</color>
 
