--- a/Training/app/src/main/res/layout/activity_my_cards.xml
+++ b/Training/app/src/main/res/layout/activity_my_cards.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color"
     tools:context="com.example.madara.training.MyCards"
     android:id="@+id/relative_mycard">
     <android.support.v7.widget.RecyclerView
