--- a/Training/app/src/main/res/layout/activity_my_profile.xml
+++ b/Training/app/src/main/res/layout/activity_my_profile.xml
@@ -160,7 +160,7 @@
         android:textColor="#fff"
         android:background="@drawable/settingbutton"
         android:layout_marginTop="8dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="bottom|center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Settings"/>
