--- a/Training/app/src/main/res/layout/garage_row.xml
+++ b/Training/app/src/main/res/layout/garage_row.xml
@@ -12,8 +12,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
+        <TextView
+            android:id="@+id/garage_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="123456"
+            android:visibility="gone"/>
+        <TextView
+            android:id="@+id/garage_lng"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="123456"
+            android:visibility="gone"/>
+        <TextView
+            android:id="@+id/garage_lat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="123456"
+            android:visibility="gone"/>
         <ImageView
+            android:id="@+id/garage_image"
             android:layout_width="108dp"
             android:layout_height="108dp"
             android:background="@color/white_color"
@@ -73,6 +91,7 @@
                 android:layout_height="22dp"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/empty_slots"
                     android:layout_width="22dp"
                     android:layout_height="22dp"
                     android:background="#4CAF50"
@@ -83,6 +102,7 @@
                     tools:text="9" />
 
                 <TextView
+                    android:id="@+id/slots_number"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
@@ -105,6 +125,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
             <TextView
+                android:id="@+id/points"
                 android:layout_gravity="left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -112,8 +133,9 @@
                 android:textStyle="bold"
                 android:textColor="#689F38"
                 android:textSize="18sp"
-                tools:text="2 P"/>
+                tools:text="0 P"/>
                 <Button
+                    android:id="@+id/btn_opengarage"
                     android:layout_alignParentRight="true"
                     android:textAlignment="center"
                     android:layout_width="96dp"
