--- a/Training/app/src/main/res/layout/activity_garage_profile.xml
+++ b/Training/app/src/main/res/layout/activity_garage_profile.xml
@@ -5,17 +5,79 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/background_color"
     tools:context="com.example.madara.training.GarageProfile">
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager_garage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tv_garage_profile_name"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        tools:text="garage name"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/my_toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="94dp"-->
+            <!--android:background="?attr/colorPrimary"-->
+            <!--android:elevation="0dp"-->
+            <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
+
+            <!--&gt;-->
+        <!--</android.support.v7.widget.Toolbar>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@color/colorAccent">
+        </LinearLayout>
+        <android.support.v7.widget.CardView
+            android:layout_centerHorizontal="true"
+            android:layout_width="340dp"
+            android:layout_height="wrap_content">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager_garage"
+                android:layout_width="match_parent"
+                android:layout_height="220dp" />
+            <LinearLayout
+                android:layout_marginTop="220dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:layout_width="340dp"
+                android:layout_height="48dp"
+                android:weightSum="3"
+                android:orientation="horizontal">
+                <Button
+                    style="?android:attr/borderlessButtonStyle"
+                    android:background="@color/white_color"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="Details"
+                    android:textAllCaps="false"
+                    android:fontFamily="@font/roboto"
+                    android:textColor="@color/grey_dark_color"
+                    />
+                <Button
+                    style="?android:attr/borderlessButtonStyle"
+                    android:background="@color/white_color"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="Reserve"
+                    android:textAllCaps="false"
+                    android:fontFamily="@font/roboto"
+                    android:textColor="@color/grey_dark_color"
+                    />
+                <Button
+                    style="?android:attr/borderlessButtonStyle"
+                    android:background="@color/white_color"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="Map"
+                    android:textAllCaps="false"
+                    android:fontFamily="@font/roboto"
+                    android:textColor="@color/grey_dark_color"
+                    />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+    </RelativeLayout>
+
 </LinearLayout>
