--- a/Training/app/src/main/res/values/styles.xml
+++ b/Training/app/src/main/res/values/styles.xml
@@ -54,4 +54,14 @@
         <!--<item name="android:textSize">20dp</item>-->
         <!--<item name="android:textStyle">normal</item>-->
     <!--</style>-->
+    <style name="TitleTextApperance" parent="@android:style/TextAppearance.DialogWindowTitle">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="SubtitleTextApperance" parent="@android:style/TextAppearance.DialogWindowTitle">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textSize">10sp</item>
+    </style>
+
 </resources>
